--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
+html,body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
