Styling video player

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,10 @@
 }
 
 .video-player {
+  background-color: black;
+  display: flex;
+  justify-content: center;
   flex-grow: 3;
+  height: 100%;
+  width: 100%;
 }
